aws/eks/vpc.tf
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"

    tags = {
        Name = "eks vpc"
    }
}

# internet gateway

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id

    tags = {
    Name = "igw"
    }
}

#Private subnet 

resource "aws_subnet" "private_us-east-1a" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.0.0/19"
    availability_zone = "us-east-1a"

    tags = {
        "Name"              =  "Private-us-east-1a"
        "kubernetes.io/role/internal-elb"  = "1"
        "kubernetes.io/cluster/demo" = "owned"
    }
}

resource "aws_subnet" "private-us-east-1b" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.32.0/19"
    availability_zone = "us-east-1b"
    
    tags = {
        "Name"              =  "Private-us-east-1a"
        "kubernetes.io/role/internal-elb"  = "1"
        "kubernetes.io/cluster/demo" = "owned"
    }

}

# public subnet 

resource "aws_subnet" "public-us-east-1a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.64.0/19"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    "Name"                       = "public-us-east-1a"
    "kubernetes.io/role/elb"     = "1"
    "kubernetes.io/cluster/demo" = "owned"
  }
}

resource "aws_subnet" "public-us-east-1b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.96.0/19"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true

  tags = {
    "Name"                       = "public-us-east-1b"
    "kubernetes.io/role/elb"     = "1"
    "kubernetes.io/cluster/demo" = "owned"
  }
}

 # nate gate 
resource "aws_eip" "nat" {
  vpc = true

  tags = {
    Name = "nat"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public-us-east-1a.id

  tags = {
    Name = "nat"
  }

  depends_on = [aws_internet_gateway.igw]
}

# route table 

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id
    
    route = [{
           cidr_block = "0.0.0.0/0"
           nat_gateway_id = aws_nat_gateway.nat.id
    },]
    tags = {
        Name = "private"
    }
}

resource "aws_rout_table" "public" {
    vpc_id = aws_vpc.main.id

    route = [{
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    },]
    tags = {
        Name = "public"
    }
}

resource "aws_route_table_association" "private-us-east-1a" {
    subnet_id = aws_subnet.private_us-east-1a.id
    route_table_id = aws_rout_table.private.id
}

resource "aws_route_table_association" "private-us-east-1b" {
    subnet_id = aws_subnet.private_us-east-1b.id
    route_table_id = aws_rout_table.private.id
}

resource "aws_route_table_association" "public-us-east-1a" {
  subnet_id      = aws_subnet.public-us-east-1a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public-us-east-1b" {
  subnet_id      = aws_subnet.public-us-east-1b.id
  route_table_id = aws_route_table.public.id
}
